fixed waybar spacing

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -20,7 +20,7 @@
 
 #custom-launcher,
 #window {
-	padding: 0px 8px;
+	padding: 0px 4px 0px 8px;
 	margin-right: 4px;	
 }
 
@@ -62,6 +62,6 @@
 #memory,
 #pulseaudio,
 #clock {
-	padding: 0px 8px;
+	padding: 0px 12px;
 	margin-left: 4px;
 }
